fixing detached head

--- a/index.html
+++ b/index.html
@@ -98,15 +98,20 @@
             <div class = "container">
             <Section class="About-Section">
                 <h3 div class="h3 title-text text-uppercase" id="About">
-                    <u>ABOUT</u>
+                <u>ABOUT</u>
                 </h3>
-                <p>About Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id
-                    magna ullamco eu. Do aute
-                    ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt
-                    tempor eu consequat enim
-                    dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua
-                    officia quis et
-                    incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore
+                <p>My name is Tino Machida and welcome to my Git- Page. I am a recent graduate from the University of Manitoba. 
+                I was a Computer Science Major (Software Engineering Concerntration) student and thoroughly enjoyed my program.
+                My program was very challenging at times but still highly mentally stimulating and tested every aspect of my resolve to 
+                complete it. The nature of my degree has prepared me for multiple avenues where I can put my my skills to use.</p>
+                <br>
+                <p>
+                 My program involved a great deal of independent research, requiring initiative, self-motivation and learning a wide range 
+                 of skills and technologies. It consisted of courses like Database Systems, Analysis of Algorithms, Web Technologies (Distributed
+                 Computing, and Computer Networks), Software Engineering, Specification and design of Graphical User Interface, Technical Communication
+                 and so on. The program assisted me to gain basic but essential knowledge in the multiple fields of Computer Science. When I 
+                 I am not stuck typing away code behind a screen you can find me playing around with various digital audio workstations and producing
+                 music or in a park somewhere enjoying the outdoors.
                 </p>
             </Section>
         </div>
