About Info Updated

--- a/index.html
+++ b/index.html
@@ -101,17 +101,24 @@
                 <u>ABOUT</u>
                 </h3>
                 <p>My name is Tino Machida and welcome to my Git- Page. I am a recent graduate from the University of Manitoba. 
-                I was a Computer Science Major (Software Engineering Concerntration) student and thoroughly enjoyed my program.
-                My program was very challenging at times but still highly mentally stimulating and tested every aspect of my resolve to 
-                complete it. The nature of my degree has prepared me for multiple avenues where I can put my my skills to use.</p>
-                <br>
+                    I was a Computer Science Major (Software Engineering Concerntration) student and thoroughly enjoyed my program.
+                    My program was very challenging at times but still highly mentally stimulating and tested every aspect of my
+                    resolve to complete it. The nature of my degree has prepared me for multiple avenues where I can put my my skills
+                    to use.
+                </p>
+                <p>Adapting to various work cultures, identifying and resolving bottlenecks and prioritizing have been striking features of 
+                    my working style. In addition to the above, I strongly believe in learning and sharing my knowledge with my colleagues.
+                    “Knowledge parted is knowledge gained” has been my motto in life. 
+                    I am always keen to learn and am sharp at identifying and solving problems
+                 </p>
+                
                 <p>
-                 My program involved a great deal of independent research, requiring initiative, self-motivation and learning a wide range 
-                 of skills and technologies. It consisted of courses like Database Systems, Analysis of Algorithms, Web Technologies (Distributed
-                 Computing, and Computer Networks), Software Engineering, Specification and design of Graphical User Interface, Technical Communication
-                 and so on. The program assisted me to gain basic but essential knowledge in the multiple fields of Computer Science. When I 
-                 I am not stuck typing away code behind a screen you can find me playing around with various digital audio workstations and producing
-                 music or in a park somewhere enjoying the outdoors.
+                My program involved a great deal of independent research, requiring initiative, self-motivation and learning a wide range 
+                    of skills and technologies. It consisted of courses like Database Systems, Analysis of Algorithms, Web Technologies (Distributed
+                    Computing, and Computer Networks), Software Engineering, Specification and design of Graphical User Interface, Technical 
+                    Communication and so on. The program assisted me to gain basic but essential knowledge in the multiple fields of Computer Science.
+                     When I am not stuck typing away code behind a screen you can find me playing around with various digital audio workstations and 
+                     producing music or in a park somewhere enjoying the outdoors.
                 </p>
             </Section>
         </div>
