--- a/index.html
+++ b/index.html
@@ -233,58 +233,51 @@
             Hack+ PHP + Javascript and HTML app that allows for the user to enter in their bio-metrics and get their BMR and BMI.
             Not much work was put in here. 
             </p>
-            <h6>Foody D<h6>
-            <h6>Movie-Goers<h6>
-
-            <p>Technologies...Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis
-                aliqua id magna ullamco eu. Do aute
-                ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt
-                tempor eu consequat enim
-                dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et
-                aliqua
-                officia quis et
-                incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit
-                dolore.
-                Aliquip nulla enim
-                veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit
-                dolore.incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt
-                mollit
-                dolore.
-                Aliquip nulla enim
-                veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit
-                dolore.veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat
-                elit
-                dolore.
+    <br>
+            <h6><b>Foody D</b><h6>
+            <p>
+            This was a mock up site which emphasised on HCI and placment of components. As you go through the web app you will notice that it'safe
+            not really fleshed out. It's meant to be a mock up with a focus on asthetics and heuristics. It's basically a front-end stub without
+            any back-end attached to it, hence it does not process any request. It was built with HTML+CSS+ Javascript and Bootstrap
+            </p>
+    <br>
+            <h6><b>Movie-Goers</b><h6>
+            <p>
+          This was a Software Engineering 1 project where I teamed up with 4 other brilliant colleagues to build a fully functional android app. I found
+          myself taking the lead role in this project and took up the position of scrum master and repo-manager. This project is what flamed my
+          apsirations to particularly pursue Software Engineering. Having the oppourtunity to work with a well concerted and orchestrated team is 
+          always a good feeling.The app allows for users to view theaters within their city and book tickets and seats in advance. It also allows users to buy concessions
+          and rate movies before and after watching them. It was built with Java and Android Studio.
             </p>
 
  <br> <br> <br> <br>
 
             <h5 id="InProgress"><b>InProgress</b></h5>
-             <h6>AutoPost<h6>
+             <h6><b>AutoPost</b><h6>
+               <p>
+               Webb app that runs on a web-server and automatically posts to social media for you at set intervals. The user determines the 
+               content and the time intervals for the content to be posted. I know Facebook has something similar but I decided to implement 
+               this from the ground up. Currently using python and Selenium, might change it later on
+                 </p>
 
                   <br>
-            <h6>HowFit2<h6>
-
+            <h6><b>HowFit2</b><h6>
+           <p> Translating the Web app to NativeScript, saw this as an oppourtunity to learn NativeScript and add more features to the app
+      </p>
                  <br>
-             <h6>BudgeIt<h6>
-
+             <h6><b>BudgeIt</b><h6>  <p> 
+             I find the budget websites online highly annoying.
+             And I hate having to download a bulky app when all I want to do is quick math.
+             This is a Android + Webb App that allows for quick budget planning. Highly Customizable </p>
                   <br>
-              <h6>[Undiscloded 1]<h6>
+              <h6><b>[Undiscloded 1]</b><h6>
               <p>An undisclosed project with a team of 5 other developers on a web and mobile app</p>
               <br>
-               <h6>[Undiscloded 2]<h6>
+               <h6><b>[Undiscloded 2]</b><h6>
                <p> A solo project I have been undertaking since April 2020 - Updates will come soon</p>
 
 
-            <p>Projects Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id
-                magna ullamco eu. Do aute
-                ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt
-                tempor eu consequat enim
-                dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua
-                officia quis et
-                incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore.
-                Aliquip nulla enim
-                veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.
+            <p>
             </p>
         </section>
 
@@ -293,19 +286,8 @@
 <div class = "container">
         <section class="Contact-section">
             <h4 id="Contact">Contact</h4>
-            <p>Contact Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua
-                id
-                magna ullamco eu. Do aute
-                ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt
-                tempor eu consequat enim
-                dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et
-                aliqua
-                officia quis et
-                incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit
-                dolore.
-                Aliquip nulla enim
-                veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit
-                dolore.
+            <p>Contact
+               
             </p>
         </section>
           </div>
