--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <div class="col m">
                     <a href="https://www.soundcloud.com/mczee1 ">
-                    <img src="/assets/img/soundcloud.svg" style="width: 30px;"></a></div>
+                    <img src="./assets/img/soundcloud.svg" style="width: 30px;"></a></div>
                     </div>
             </nav>
 
@@ -171,18 +171,25 @@
 
                  <div class="col"><span class="badge badge-dark" id="python">Python</span>
                     <img src="./assets/img/py.jpg" style="width: 100px;"></div>
+
                     <div class="col"><span class="badge badge-dark" id="java">Java</span>
                         <img src="./assets/img/java.jpg" style="width: 100px;"></div>
+
                     <div class="col"><span class="badge badge-dark" id="C-Language">C Language</span>
                    <img src="./assets/img/C.png" style="width: 100px;"></div>
+
                     <div class="col"><span class="badge badge-dark" id="C-PlusPlus">C ++</span>
                     <img src="./assets/img/CPlus.png" style="width: 100px;"></div>
+
                     <div class="col"><span class="badge badge-dark" id="ruby">Ruby</span>
                     <img src="./assets/img/ruby.png" style="width: 100px;"></div>
+
                      <div class="col"><span class="badge badge-dark" id="CSS">CSS</span>
                     <img src="./assets/img/css.png" style="width: 100px;"></div>
+
                     <div class="col"><span class="badge badge-dark" id="Javascript">Javascript</span>
                     <img src="./assets/img/js.jpg" style="width: 100px;"></div>
+                    
                     <div class="col"><span class="badge badge-dark" id="html">HTML</span>
                     <img src="./assets/img/html.png" style="width: 100px;"></div>
                 </div>
@@ -340,7 +347,7 @@
 
                 <div class="col">
                 <a href="https://www.soundcloud.com/mczee1 ">
-                 <img src="/assets/img/soundcloud.svg" style="width: 100px;"></a></div>
+                 <img src="./assets/img/soundcloud.svg" style="width: 100px;"></a></div>
                     
             </div>
 
