--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
                 <h3 div class="h3 title-text text-uppercase" id="About">
                 <u>ABOUT</u>
                 </h3>
-                <p div class = "para">My name is Tino Machida and welcome to my Git- Page portfolio. I am a recent graduate Computer Science Major
-                (Software Engineering Concerntration) from the University of Manitoba. My program was very challenging but still just mentally stimulating
+                <p div class = "para">My name is Tino and welcome to my Git-Page/portfolio. I am a recent graduate Computer Science Major
+                (Software Engineering Concerntration) from the University of Manitoba. My program was very challenging. As much as it was challenging
+                   it wa still just mentally stimulating
                  enough to keep me interested in what I was doing. At times I would work on a problem and encounter brick walls and feel like 
-                 a solution was not viable. During my first years I had no idea what Computer Science was all about, (very evident with me feeling stuck and 
-                 just giving up) but as dove deeper into my program I realized that it's all about solving problems and bottlenecks. 
+                 a solution was not viable. 
+                    <br>
+                   During my first years I had no idea what Computer Science was all about, (very evident with me feeling stuck and 
+                 just giving up) but as I dove deeper into my program I realized that it's all about solving problems and bottlenecks. 
                  The program tested every aspect of my resolve to complete it and through it I became a more resilient thinker.
                 The process involved a great deal of independent research, requiring initiative, self-motivation and learning a wide range of 
                 skills and technologies. </p>
@@ -145,9 +148,9 @@
                 <p div class = "para"> It consisted of courses like Database Systems, Analysis of Algorithms, Web Technologies, Software Engineering,
                  Networking, Specification and design of Graphical User Interface, Distributed Systems, Technical Communication and a whole load of Mathematics..lol
                 The program assisted me to gain basic but essential knowledge in the multiple fields of Computer Science.
-                Adapting to various work cultures, identifying and resolving bottlenecks and prioritizing have been striking features of 
+                Adapting to various work cultures, identifying plus resolving bottlenecks and prioritizing have been striking features of 
                 my working style. In addition to the above, I strongly believe in learning and sharing my knowledge with my colleagues.
-                “Knowledge parted is knowledge gained” has been my motto in life. I am always keen to learn and am sharp at identifying 
+                “Knowledge parted is knowledge gained” has been my motto in life. I am always keen to learn and I am sharp at identifying 
                 and solving problems. When I am not stuck typing away code behind a screen you can find me playing around with various 
                 digital audio workstations and producing music or in a park somewhere enjoying the outdoors.
                 </p>
@@ -161,10 +164,10 @@
                 <h4 class id="Languages"><u>Languages</u></h4>
                   <p div class = "para">
                 The very first language I ever learned was Python. Not Html, not CSS. Believe it or not but, before my first year in
-                 university, I had never programmed in my life. Not a single line of code. It was uphill, a challenge for me and I 
+                 university, I had never programmed in my WHOLE entire life. Not a single line of code. It was all the way uphill, a challenge for me and I 
                  struggled a lot to learn the basic syntax as I had never programmed anything in my whole entire life. I painstakingly 
                  learned the syntax and libraries from the ground up. It was a slow process but soon enough I was actually writing code.
-                I eventually became good at writing sensible python code it but before I knew it I ran into new hurdles.
+                I eventually became good at writing sensible python code but before I knew it I ran into new hurdles.
          </p>
                  <br><br>
                 <div class="row align-items-center">
@@ -196,10 +199,10 @@
 <br>
                 <p div class = "para">
                The very next 
-                 semester we had to use Java. Transitioning from python to Java was initially strange for me. I was not used to explicitly 
-                declaring types and the flow appeared unusually structured and peculiar to me. Soon enough, I learned how to write good
+                 semester we had to use Java. Transitioning from python to Java was at first and initially strange for me. I was not used to explicitly 
+                declaring types and the flow appeared unusually structured and very peculiar to me. Soon enough, I learned how to write good
                 code in Java too and progressed further onto C and C++ and so on. Up until today, I am still learning different languages
-                and technologies in order to diversify my fluency portfolio. I can, however, say I am strongest in Java, Python, and C++.
+                and technologies in order to diversify my portfolio and fluency. I can, however, say I am strongest in Java, Python, and C++.
                 These are my go-to languages. My program was a traditional Computer Science program hence there was not that much 
                 on Front-End Web technologies. In order to balance that out, I have been making an effort to teach myself some front
                 end frameworks
